# for_my_first_AMR

./: .gitignore  README.md  robotV2.urdf  test.urdf  test_L298N.cpp
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: amr_stack_reference.md  demo_guide.md  operation_guide.md  pi5_setup_guide.md  ydlidar_x3pro_setup.md
esp32_firmware/: platformio.ini
esp32_firmware/src/: main.cpp
maps/: my_room.pgm  my_room.yaml
ros2_ws/src/amr_base/: package.xml  setup.cfg  setup.py
ros2_ws/src/amr_base/amr_base/: __init__.py  esp32_bridge.py  goal_relay.py  scan_qos_bridge.py
ros2_ws/src/amr_base/config/: amr_config.yaml  nav2_params.yaml  slam_params.yaml
ros2_ws/src/amr_base/launch/: amr_launch.py  dev_launch.py  nav2_launch.py  slam_launch.py
ros2_ws/src/amr_base/rviz/: nav2.rviz  slam.rviz
ros2_ws/src/amr_base/urdf/: amr.urdf.xml
scripts/: setup_udev.sh
ส่งคณะ/: [Template] Team Project Template 2-68.pptx  [Template] แบบรายงานฉบับสมบูรณ์TeamProject2-68.docx  pid_simulation_colab.py  poster_content.md  technical_details.md  เนื้อหารายงาน.md
