<?xml version="1.0"?>
<package format="3">
  <name>amr_base</name>
  <version>1.0.0</version>
  <description>ESP32 serial bridge for AMR differential drive robot</description>
  <maintainer email="amr@robot.local">AMR</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
